NLP TP's/texts/robotics/robotics.stackexchange_0000066906.txt
Q:

Invoking "make -j2 -l2" failed

hello
i'm new with ROS i'm trysing to build simple C++ file using catkin_make for my ROS indigo (OS UBUNTU 14.04 LTS) and i having errors that i can't figure out
having some og this errors :
/usr/include/boost/lexical_cast.hpp:2096:66: error: expected ‘)’ before ‘char’
/usr/include/boost/lexical_cast.hpp:2096:66: error: expected ‘)’ before ‘char’
/usr/include/boost/lexical_cast.hpp: In member function ‘bool boost::detail::lexical_stream_limited_src<CharT, Traits, RequiresStringbuffer>::operator>>(int)’:
/usr/include/boost/lexical_cast.hpp:2102:53: error: expected type-specifier
                 return ((*this) >> reinterpret_cast<boost::array<char, N>& >(output)); 
                                                     ^
/usr/include/boost/lexical_cast.hpp:2102:53: error: expected ‘>’
/usr/include/boost/lexical_cast.hpp:2102:53: error: expected ‘(’
/usr/include/boost/lexical_cast.hpp:2102:53: error: ‘array’ is not a member of ‘boost’
/usr/include/boost/lexical_cast.hpp:2102:66: error: expected primary-expression before ‘char’
                 return ((*this) >> reinterpret_cast<boost::array<char, N>& >(output)); 
                                                                  ^
/usr/include/boost/lexical_cast.hpp:2102:66: error: expected ‘)’ before ‘char’
/usr/include/boost/lexical_cast.hpp:2102:66: error: expected ‘)’ before ‘char’
make[2]: *** [agitr/CMakeFiles/hello.dir/src/hello.cpp.o] Error 1
make[1]: *** [agitr/CMakeFiles/hello.dir/all] Error 2
make: *** [all] Error 2
Invoking "make -j2 -l2" failed

Edit:
#include <ros/ros.h>

int main(int argc,char **argv)
{
  ros::init(argc,argv,"hello");

  ros::NodeHandle nh;

  ROS_INFO_STREAM("hello");
} 

Originally posted by CEAS on ROS Answers with karma: 31 on 2015-04-08
Post score: 0

Original comments
Comment by Morgan on 2015-04-08:
This looks like a C++ syntax error in hello.cpp . Can you post that file?
Comment by gvdhoorn on 2015-04-09:
@CEAS: I've updated your question with the contents of your comment. Please update your question in the future, if any commenter asks for it.
Comment by CEAS on 2015-04-09:
thank you :)

A:

It's working now. It just needed to be correctly updated :D
After few delete, restore, delete, restore it started working by itself
thank you all ^^

Originally posted by CEAS with karma: 31 on 2015-04-09
This answer was ACCEPTED on the original site
Post score: 0

